Demos/ingressdemo/clippy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: party-clippy
  namespace: ingressdemo
spec:
  template:
    metadata:
      labels:
        app: party-clippy
    spec:
      containers:
      - image: r.j3ss.co/party-clippy
        name: party-clippy
        tty: true
        command: ["party-clippy"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: party-clippy
  namespace: ingressdemo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: party-clippy
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: party-clippy
  namespace: ingressdemo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: erp.espc18.cf
    http:
      paths:
      - backend:
          serviceName: party-clippy
          servicePort: 80
        path: /
